# js-stellar-xdr-json

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: claude-fix-stellar-xdr.yml  copilot-fix-stellar-xdr.yml  publish.yml  rust.yml
scripts/: post-build.mjs  post-build.ts
src/: lib.rs  utils.rs
tests/: tests.rs  web.rs
