[package]
name = "stellar-xdr-json"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
schemars = "0.8.16"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-json-wasm = "1.0.1"
serde_json = "1.0.114"

[dependencies.stellar-xdr]
version = "21.0.1"
features = ["std", "curr", "base64", "serde", "serde_json", "schemars"]
git = "https://github.com/stellar/rs-stellar-xdr"
rev = "89a8bcde36aeda551cb0e3f9aa3e9fcf315fe1cc"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
