[package]
name = "stellar-xdr-json"
version = "0.0.4"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
schemars = "0.8.16"
serde_json = "1.0.114"
console_error_panic_hook = { version = "0.1.7", optional = true }
# TODO: For use with generating native values.
# serde-wasm-bindgen = "0.6.5"

[dependencies.stellar-xdr]
version = "21.1.0"
features = ["std", "curr", "base64", "serde", "serde_json", "schemars"]


[dependencies.soroban-spec-tools]
# path = "../soroban-tools/cmd/crates/soroban-spec-tools/"
rev = "c5729737c7dfc122852a707d4e6d9311b9b7be74"
git = "https://github.com/ahalabs/stellar-cli"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.dev]
opt-level = "z"
debug = 0
strip = "symbols"

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false

